adiciona atualização de apreendizado da pagina

--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,10 +1,17 @@
+* {
+    background-color: aquamarine;
+}
+
 .titulo {
-    color: red;
+    color: rgb(0, 0, 0);
     text-align: center;
+    text-transform: uppercase;
+    font-size: 3rem;
 }
 
 .subtitulo {
     text-align: center;
+    font-size: 2rem;
 }
 
 .img {
