--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -115,5 +115,28 @@ button {
     color: #fff;
    }
 
+   .sessao-principal-imagem {
+    width: 500px;
+    
+}
+
+.principal-imagem-item {
+    width: 50%;
+
+    animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float{
+    0%{
+        transform: translateX(0);
+    }
+    50%{
+        transform: translateY(-25px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
    
   
