--- a/src/componets/estaticos/navbar/Navbar.css
+++ b/src/componets/estaticos/navbar/Navbar.css
@@ -28,7 +28,7 @@
     gap: 20px;
 }
 
-.container-conteudo {
+.cursor {
     cursor: pointer!important;
 }
 
@@ -43,4 +43,9 @@
     border-bottom: 1px solid #feffff;
     border-top: 1px solid #feffff;
 }
+
+.text-decorator-none {
+    text-decoration: none;
+}
+
 
