--- a/src/componets/estaticos/footer/Footer.css
+++ b/src/componets/estaticos/footer/Footer.css
@@ -9,6 +9,7 @@
 .container-redeSociais {
     padding-top: 20px;
     background-color: #0B8CBF!important ;
+    height: 120px !important; 
 }
 
 .redeSociais-titulo {
@@ -18,5 +19,6 @@
 .container-footer {
     background-color: #0B8CBF!important ;
     padding: 20px!important;
+    height: 60px !important;
 }
 
