--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -15,12 +15,22 @@
 .box-conteudo-titulo {
     text-transform: uppercase;
     font-size: 3rem!important;
-    font-family: 'Righteous', cursive;
+    font-family: 'Righteous', cursive !important;
+    color: white !important; 
+    font-weight: bold !important;
+
 }
 
 .box-conteudo-subtitulo {
     font-weight: 100!important;
-    font-family: 'BhuTuka Expanded One', cursive;
+    font-family: 'BhuTuka Expanded One', cursive !important;
+    color: white !important;
+    font-weight: bold !important ;
+
+}
+
+.cor-branca {
+    background-color: white!important;
 }
 
 
