--- a/src/componets/postagens/tabpostagem/TabPostagem.css
+++ b/src/componets/postagens/tabpostagem/TabPostagem.css
@@ -1,3 +1,10 @@
 .titulo {
     font-weight: bold;
 }
+
+.container-tabela {
+    background-color: #0B8CBF!important ;
+    width: 100vw;
+    border-top: none;
+    border: none;
+}
