--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 .text-decorator-none {
     text-decoration: none;
 }
@@ -5,12 +7,74 @@
 .imagem {
     background-image: url(https://www.indexmed.com.br/conecta/Content/isometric-data.png);
     background-repeat: no-repeat;
-    width: 100vh ;
     min-height:67.20vh;
-    background-size: cover;
+    background-size: auto;
     background-position:center;
 }
 
-.negrito {
-    font-weight: "bold" !important;
+
+
+.container-login {
+    margin: 30px auto;
+    
 }
+
+.fonte-titulo-login {
+    font-family: 'Anton', sans-serif !important;
+    font-weight: "bold" !important;
+    color:#3d0f03!important;
+}
+
+.input-login input{
+    font-size: 18px;
+    color: #3d0f03!important;
+}
+
+.input-login label {
+    color: #3d0f03;
+}
+
+input{
+    color: black;
+  }
+
+.font-cadastre-se {
+    font-weight: 700!important;
+    color: #3d0f03;
+}
+
+
+
+/* Botão Logar */
+.btn-logar {
+    padding: 1em 1.6em;
+    border: 10px;
+    transition: all .5s ease-in-out;
+    font-size: 17px;
+    letter-spacing: 0.1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: bold!important;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 26px;
+    box-shadow: 0px 0px 0px 0px rgba(145, 192, 255, 0.5),
+                inset -8px -8px 16px 0px rgba(7, 144, 236, 0.973),
+                inset 0px 11px 28px 0px rgb(255, 255, 255);
+   }
+   
+   .btn-logar:hover {
+    transition: all .5s ease-in-out;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 0px 0px rgba(145, 192, 255, 0.5),
+                 inset 8px -8px 16px 10px rgb(0, 185, 255),
+                 inset 0px 11px 28px 0px rgb(255, 255, 255);
+   }
+   
+   .btn-logar:active {
+    border-radius: 26px;
+    box-shadow: 0px 0px 0px 0px rgba(145, 193, 255, 0.822),
+     inset -8px -8px 16px 10px #91c0ff99,
+     inset 0px 11px 28px 50px rgb(255, 255, 255);
+   }
