--- a/src/componets/temas/cadastroTema/CadastroTema.css
+++ b/src/componets/temas/cadastroTema/CadastroTema.css
@@ -1,3 +1,25 @@
-.topo {
-    margin-top:20px;
+.container-cadastroTema {
+    height: 65.6vh;
+    padding: 50px;
+    box-sizing: border-box;
+    display: flex;
+    margin: 60px 0;
+    background: rgba( 165, 255, 255, 0.1 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.cadastroTema-formulario {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    margin: 60px 0;
+    padding: 15px;
+    box-sizing: border-box;
 }
