--- a/src/componets/postagens/cadastroPost/CadastroPost.css
+++ b/src/componets/postagens/cadastroPost/CadastroPost.css
@@ -1,3 +1,17 @@
-.topo{
-    margin-top: 20px;
+
+
+.container-cadastroPost {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 60px;
+    padding: 25px;
+    background: rgba( 165, 255, 255, 0.1 )!important;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 )!important;
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 )!important;
 }
