--- a/src/componets/estaticos/footer/Footer.css
+++ b/src/componets/estaticos/footer/Footer.css
@@ -3,22 +3,62 @@
 }
 
 .container-rodape {
-    height: 12rem;
+    background-color: #183114!important ;
+    width: 100vw;
 }
 
-.container-redeSociais {
-    padding-top: 20px;
-    background-color: #0B8CBF!important ;
-    height: 120px !important; 
+.container-rodape-conteudo {
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+    box-sizing: border-box;
+    gap: 15px;
 }
 
-.redeSociais-titulo {
-    color: #feffff;
+.rodape-titulo {
+    color: #FCEE21;
+    font-size: 2rem!important;
+    font-weight: bold;
+}
+
+.container-rodape-textos {
+    display: flex;
+    gap: 1%;
+    align-items: center;
+}
+
+.container1-textos {
+    width: 40%;
+    text-align: justify;
+    color: #DCDE9F;
+}
+
+.container2-textos {
+    width: 29%;
+    text-align: center;
+    color: #DCDE9F;
+}
+
+.container3-textos {
+    width: 30%;
+    text-align: center;
+    color: #DCDE9F;
+}
+
+.icons {
+    font-size: 60px!important;
+    color: #DCDE9F;
 }
 
 .container-footer {
-    background-color: #0B8CBF!important ;
-    padding: 20px!important;
-    height: 60px !important;
+    text-align: center!important;
+    padding-bottom: 25px;
+    box-sizing: border-box;
+    color: #DCDE9F;
 }
+
+.container-rodape-links {
+    color: #DCDE9F;
+}
+
 
