--- a/src/componets/estaticos/navbar/Navbar.css
+++ b/src/componets/estaticos/navbar/Navbar.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 .container-navbar {
-    background-color: #0B8CBF!important ;
+    background-color: #183114!important ;
     
     padding: 15px!important;
     box-sizing: border-box;
@@ -22,6 +22,8 @@
     font-size: 48px!important;
     font-family: 'Montserrat Alternates', sans-serif!important;
     font-weight: 500!important;
+    color: #FCEE21!important;
+
 }
 
 .container-menu {
@@ -40,9 +42,9 @@
 }
 
 .conteudo-item:hover{
-    color: #ffffffb0!important;
-    border-bottom: 1px solid #feffff;
-    border-top: 1px solid #feffff;
+    color: #DCDE9F!important;
+    border-bottom: 1px solid #FCEE21!important;
+    border-top: 1px solid #FCEE21!important;
 }
 
 .text-decorator-none {
