adiciona novas atualizações da home

--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 .container-principal {
-    background-color: #0B8CBF!important ;
+    background-color: #F3F4D3!important ;
     width: 100vw;
 }
 
